--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
-  ~ Copyright (c) 2017 klnvch
+  ~ Copyright (c) 2023 klnvch
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -22,145 +22,148 @@
   ~ SOFTWARE.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled"
-    android:keepScreenOn="true"
-    android:padding="32dp"
-    tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ToggleButton
-        android:id="@+id/buttonCreate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        android:textOff="@string/create"
-        android:textOn="@string/delete"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/paper_tiled"
+        android:keepScreenOn="true"
+        android:padding="32dp"
+        tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
 
-    <Button
-        android:id="@+id/buttonBluetoothVisibility"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/bluetooth_not_discoverable"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCreate" />
+        <ToggleButton
+            android:id="@+id/buttonCreate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:textOff="@string/create"
+            android:textOn="@string/delete"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textBluetoothVisibility"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/bluetooth_only_visible_to_paired_devices"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBluetoothVisibility" />
+        <Button
+            android:id="@+id/buttonBluetoothVisibility"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/bluetooth_not_discoverable"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCreate" />
 
-    <TextView
-        android:id="@+id/textStatusLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="@string/name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
+        <TextView
+            android:id="@+id/textBluetoothVisibility"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/bluetooth_only_visible_to_paired_devices"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonBluetoothVisibility" />
 
-    <TextView
-        android:id="@+id/textStatusColon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="@string/colon"
-        app:layout_constraintStart_toEndOf="@+id/textStatusLabel"
-        app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
+        <TextView
+            android:id="@+id/textStatusLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
-    <TextView
-        android:id="@+id/textStatusValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:text="@string/name_not_set"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textStatusLabel" />
+        <TextView
+            android:id="@+id/textStatusColon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/colon"
+            app:layout_constraintStart_toEndOf="@+id/textStatusLabel"
+            app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
-    <ProgressBar
-        android:id="@+id/progressCreate"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/separator"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
+        <TextView
+            android:id="@+id/textStatusValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:text="@string/name_not_set"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textStatusLabel" />
 
-    <View
-        android:id="@+id/separator"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/separator_width"
-        android:layout_margin="8dp"
-        android:background="@color/foreground_color"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textStatusValue" />
+        <ProgressBar
+            android:id="@+id/progressCreate"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/separator"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
-    <ToggleButton
-        android:id="@+id/buttonScan"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        android:textOff="@string/scan"
-        android:textOn="@string/cancel"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/separator" />
+        <View
+            android:id="@+id/separator"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/separator_width"
+            android:layout_margin="8dp"
+            android:background="@color/foreground_color"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textStatusValue" />
 
-    <ProgressBar
-        android:id="@+id/progressScan"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
+        <ToggleButton
+            android:id="@+id/buttonScan"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:textOff="@string/scan"
+            android:textOn="@string/cancel"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/separator" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listTargets"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ProgressBar
+            android:id="@+id/progressScan"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
 
-    <TextView
-        android:id="@+id/textWarningEmpty"
-        style="@style/TextAppearance.AppCompat.Large"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search_no_results"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listTargets"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineVertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        <TextView
+            android:id="@+id/textWarningEmpty"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_no_results"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
