--- a/app/src/main/res/layout-land/fragment_main_menu.xml
+++ b/app/src/main/res/layout-land/fragment_main_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
-  ~ Copyright (c) 2017 klnvch
+  ~ Copyright (c) 2023 klnvch
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -22,105 +22,120 @@
   ~ SOFTWARE.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled"
-    android:padding="32dp"
-    tools:context="by.klnvch.link5dots.ui.menu.MenuActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/textViewGreeting"
-        style="@style/TextAppearance.AppCompat.Headline"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:padding="16dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/main_menu_single_player"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Hi, Unknown!" />
+    <data>
 
-    <Button
-        android:id="@+id/main_menu_single_player"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_android_48dp"
-        android:drawableStart="@drawable/ic_android_48dp"
-        android:onClick="onClick"
-        android:text="@string/menu_single_player"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <variable
+            name="userName"
+            type="String" />
 
-    <Button
-        android:id="@+id/main_menu_multi_player"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_person_48dp"
-        android:drawableStart="@drawable/ic_person_48dp"
-        android:onClick="onClick"
-        android:text="@string/menu_multi_player"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toTopOf="parent" />
+        <variable
+            name="listener"
+            type="by.klnvch.link5dots.ui.menu.OnMainMenuActionListener" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/paper_tiled"
+        android:padding="32dp">
+
+        <TextView
+            android:id="@+id/textViewGreeting"
+            style="@style/TextAppearance.AppCompat.Headline"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:onLongClick="@{listener::onUserNameClicked}"
+            android:padding="16dp"
+            app:greetings="@{userName}"
+            app:layout_constraintBottom_toTopOf="@+id/main_menu_single_player"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Hi, Unknown!" />
+
+        <Button
+            android:id="@+id/main_menu_single_player"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_android_48dp"
+            android:drawableLeft="@drawable/ic_android_48dp"
+            android:onClick="@{() -> listener.onSinglePlayerClicked()}"
+            android:text="@string/menu_single_player"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/main_menu_multi_player"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_person_48dp"
+            android:drawableLeft="@drawable/ic_person_48dp"
+            android:onClick="@{() -> listener.onMultiplayerPlayerClicked()}"
+            android:text="@string/menu_multi_player"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button
-        android:id="@+id/main_menu_scores"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_star_48dp"
-        android:drawableStart="@drawable/ic_star_48dp"
-        android:onClick="onClick"
-        android:text="@string/scores_title"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_single_player" />
+        <Button
+            android:id="@+id/main_menu_scores"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_star_48dp"
+            android:drawableLeft="@drawable/ic_star_48dp"
+            android:onClick="@{() -> listener.onScoresClicked()}"
+            android:text="@string/scores_title"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_menu_single_player" />
 
-    <ImageButton
-        android:id="@+id/main_menu_settings"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/settings"
-        android:onClick="onClick"
-        android:src="@drawable/ic_settings_48dp"
-        app:layout_constraintEnd_toStartOf="@+id/main_menu_about"
-        app:layout_constraintStart_toEndOf="@+id/main_menu_scores"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
+        <ImageButton
+            android:id="@+id/main_menu_settings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/settings"
+            android:onClick="@{() -> listener.onSettingsClicked()}"
+            android:src="@drawable/ic_settings_48dp"
+            app:layout_constraintEnd_toStartOf="@+id/main_menu_about"
+            app:layout_constraintStart_toEndOf="@+id/main_menu_scores"
+            app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
 
-    <ImageButton
-        android:id="@+id/main_menu_about"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/application_info_label"
-        android:onClick="onClick"
-        android:src="@drawable/ic_info_48dp"
-        app:layout_constraintEnd_toStartOf="@+id/main_menu_how_to"
-        app:layout_constraintStart_toEndOf="@+id/main_menu_settings"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
+        <ImageButton
+            android:id="@+id/main_menu_about"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/application_info_label"
+            android:onClick="@{() -> listener.onInfoClicked()}"
+            android:src="@drawable/ic_info_48dp"
+            app:layout_constraintEnd_toStartOf="@+id/main_menu_how_to"
+            app:layout_constraintStart_toEndOf="@+id/main_menu_settings"
+            app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
 
-    <ImageButton
-        android:id="@+id/main_menu_how_to"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/help"
-        android:onClick="onClick"
-        android:src="@drawable/ic_help_48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/main_menu_about"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
+        <ImageButton
+            android:id="@+id/main_menu_how_to"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/help"
+            android:onClick="@{() -> listener.onHelpClicked()}"
+            android:src="@drawable/ic_help_48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/main_menu_about"
+            app:layout_constraintTop_toBottomOf="@+id/main_menu_multi_player" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineVertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
