--- a/app/src/main/res/navigation/menu_nav_graph.xml
+++ b/app/src/main/res/navigation/menu_nav_graph.xml
@@ -56,7 +56,7 @@
         android:label="@string/app_name" />
     <activity
         android:id="@+id/scoresActivity"
-        android:name="by.klnvch.link5dots.scores.ScoresActivity"
+        android:name="by.klnvch.link5dots.ui.scores.ScoresActivity"
         android:label="@string/scores_title" />
     <dialog
         android:id="@+id/usernameDialog"
